<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello World!</string>
    <string name="app_header">My Nanodegree Apps!</string>
    <string name="spotify_button">SPOTIFY STREAMER</string>
    <string name="scores_button">SCORES APP</string>
    <string name="library_button">LIBRARY APP</string>
    <string name="build_button">BUILD IT BIGGER</string>
    <string name="xyz_button">XYZ READER</string>
    <string name="capstone_button">CAPSTONE: MY OWN APP</string>

</resources>
